--- a/SecondDay/css/index-styles.css
+++ b/SecondDay/css/index-styles.css
@@ -38,7 +38,8 @@
 
 .profile_image {
     width: 300px;
-    height: 310px;
+    height: 300px;
+    object-fit: cover;
     border: 1px solid black;
     border-radius: 50%;
     float: left;
